Bug 1322458 - Fix kungFuDeathGrip errors that clang plugin reports on Windows. r=aklotz,Ehsan

MozReview-Commit-ID: FLTLZSg2yh9